--- a/style.css
+++ b/style.css
@@ -37,3 +37,10 @@ section h1 {
   text-align: center;
   font-size: 80px;
 }
+
+@media screen and (max-width: 768px) {
+
+  .intro h1 {
+    font-size: 50px;
+  }
+}
